# neewerd

./: .gitignore  CHANGELOG.md  LICENSE  README.md  devices.example.toml  neewerd.example.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: HTTP-API.md  MCP.md
examples/: README.md  rgbaw-uni-per-tube.toml  rgbw-binpacked.toml
neewerd/: __init__.py  __main__.py  cli.py  client.py  mcp_server.py  presets.py  socketpath.py
neewerd/modules/: __init__.py  artnet.py  artnet_bridge.py  ha_discovery.py  http.py  mqtt.py  osc.py  sacn.py  socket.py
neewerd/modules/ui/: console.html  index.html
packaging/: neewerd.openrc  neewerd.service  neewerd.user.service
tests/: conftest.py  test_artnet.py  test_artnet_bridge.py  test_cli.py  test_client.py  test_ha_discovery.py  test_http.py  test_http_sse.py  test_main.py  test_mcp_server.py  test_mqtt.py  test_osc.py  test_presets.py  test_sacn.py  test_socket.py  test_socketpath.py
